adding D2 and lacunarity

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
 __pycache__/
 *.py[cod]
 *.egg-info/
+/fracstack.egg-info/
 testing_fracstack/
-examples/
+analysis_13&9.ipynb
+BC_testing.ipynb
+/app
+/dist
+/build
+/FracStack.spec
+/FracStack-macOS.spec
+/FracStack-Windows.spec
+/FracStack-PyQt-Windows.spec
+/FracStack-PyQt-macOS.spec
+/FracStack-macOS-exe.spec
+/FracStack-macOS-simple.spec
+/FracStack-Windows-exe.spec
+/FracStack-Windows-simple.spec
+/old_app
+/icons
+/fracstack.egg-info
+/install.bat
+/install-pyqt.bat
+/README-macOS.md
+/README-Windows.md
+/README.md
+/README.txt
+/README.md
+/requirements-simple.txt
+/requirements-pyqt-simple.txt
+/.venv/
+/.venv-pyqt/
+.vscode/
